# isPitch

./: README.md  docker-compose.yml
frontend/: .env.example  README.md  (+3 more)
ispitch-api/: .env.example  .gitignore  Procfile  README.md  pyproject.toml
ispitch-api/ispitch_api/: app.py
ispitch-api/src/: main.py
ispitch-api/src/analysis/application/adapters/: sse_adapter.py
ispitch-api/src/analysis/application/dependencies/: models.py  services.py  validations.py
ispitch-api/src/analysis/application/factories/: analysis_factory.py
ispitch-api/src/analysis/application/mappers/: analysis_schema_mapper.py  analysis_stats_mapper.py  fillerwords_analysis_schema_mapper.py  grammar_analysis_schema_mapper.py  lexical_richness_analysis_schema_mapper.py  prosody_analysis_schema_mapper.py  recent_analysis_mapper.py  sentiment_analysis_schema_mapper.py  silence_analysis_schema_mapper.py  topic_analysis_schema_mapper.py  vocabulary_analysis_schema_mapper.py
ispitch-api/src/analysis/application/services/: analysis_workflow_service.py
ispitch-api/src/analysis/application/tasks/: analysis_tasks.py
ispitch-api/src/analysis/domain/mappers/: analysis_mapper.py  transcription_mapper.py
ispitch-api/src/analysis/domain/models/: analysis.py  analysis_stats.py  events.py  fillerwords.py  grammar.py  lexical_richness.py  prosody.py  sentiment.py  silence.py  time_range.py  topic.py  transcription.py  vocabulary.py
ispitch-api/src/analysis/domain/ports/: input.py  output.py
ispitch-api/src/analysis/domain/services/: analysis_orchestrator_service.py  analysis_stats_service.py  async_analysis_orchestrator_service.py  audio_analysis_service.py  lexical_richness_service.py  score_calculation_service.py  sentiment_analysis_service.py  speech_analysis_service.py  topic_analysis_service.py  vocabulary_analysis_service.py
ispitch-api/src/analysis/domain/utils/: text_segmenter.py
ispitch-api/src/analysis/infrastructure/adapters/: __init__.py
ispitch-api/src/analysis/infrastructure/context/: resource_manager.py
ispitch-api/src/analysis/infrastructure/mappers/: analysis_document_mapper.py
ispitch-api/src/api/: exception_handler.py
ispitch-api/src/api/endpoints/: analysis.py
ispitch-api/src/api/schemas/: analysis.py  camel_case_model.py
ispitch-api/src/auth/application/dependencies/: security.py  services.py
ispitch-api/src/auth/domain/models/: login_response.py  user.py
ispitch-api/src/auth/domain/ports/: input.py  output.py
ispitch-api/src/auth/domain/services/: auth_service.py
ispitch-api/src/auth/infrastructure/adapters/: password_manager_adapter.py  token_manager_adapter.py
ispitch-api/src/auth/infrastructure/mappers/: user_document_mapper.py
ispitch-api/src/core/: celery_config.py  config.py  database.py  dependencies.py  exception_handlers.py  exceptions.py  middlewares.py
ispitch-api/src/core/schemas/: __init__.py  error.py  pagination_metadata.py
ispitch-api/src/services/: analysis_service.py  audio_analysis_service.py  audio_service.py  speech_analysis_service.py  storage_service.py  transcription_service.py
ispitch-api/src/services/analyzers/: filler_word_analyzer.py  rate_analyzer.py  silence_analyzer.py
(+175 files in other folders)
