[project]
name = "ispitch-api"
version = "0.1.0"
description = ""
authors = [
    {name = "lucas silva",email = "lucas.correia010103@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.10, <3.11"
dependencies = [
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "openai-whisper (>=20250625,<20250626)",
    "numpy (<2)",
    "spacy (>=3.8.7,<4.0.0)",
    "pt-core-news-sm @ https://github.com/explosion/spacy-models/releases/download/pt_core_news_sm-3.8.0/pt_core_news_sm-3.8.0-py3-none-any.whl",
    "librosa (>=0.11.0,<0.12.0)",
    "beanie (>=2.0.0,<3.0.0)",
    "motor (>=3.7.1,<4.0.0)",
    "celery (>=5.5.3,<6.0.0)",
    "redis (>=6.4.0,<7.0.0)",
    "sse-starlette (>=3.0.2,<4.0.0)",
    "passlib[argon2] (>=1.7.4,<2.0.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "nltk (>=3.9.2,<4.0.0)",
    "torch (>=2.9.0,<3.0.0)",
    "transformers (>=4.57.1,<5.0.0)",
    "sentencepiece (>=0.2.1,<0.3.0)",
    "protobuf (>=6.33.0,<7.0.0)",
    "praat-parselmouth (>=0.4.6,<0.5.0)",
    "language-tool-python (>=2.7.1,<3.0.0)",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
taskipy = "^1.14.1"
ruff = "^0.11.12"
honcho = "^2.0.0"

[tool.ruff]
line-length = 81
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
pythonpath = "."
addopts = "-p no:warnings"

[tool.taskipy.tasks]
lint = "ruff check"
pre_format = "ruff check --fix"
format = "ruff format"
run = "fastapi dev src/main.py"
worker = "celery -A src.core.celery_config.celery_app worker --pool=solo --loglevel=info"
dev = "honcho start"
pre_test = "task lint"
test = "pytest -s -x --cov=src -vv"
post_test = "coverage html"